# arch-greeter

./: Cargo.toml  Makefile  README.md
src/: dbus.rs  main.rs  pacman.rs  sentences.rs
