[package]
name = "greeter"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
alpm = { version = "5.0.0", default-features = false, features = [
  "pkg-config",
] }
libc = "0.2.178"
rand = { version = "0.9.2", default-features = false, features = [
  "thread_rng",
] }
tokio = { version = "1.37", default-features = false, features = ["macros"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
